feat: finish swagger docs
This commit will use the struct which was define in swagger docs to be the http request
and response
