# delivery/http/token.go
@@ -1,6 +1,7 @@
 package http
 
 import (
+	"GoCleanArchitecture/docs/swagger"
 	"GoCleanArchitecture/entities"
 	"net/http"
 	"strings"
@@ -17,14 +18,30 @@ func NewTokenHandler(router *gin.Engine, tokenUsecase entities.TokenUsecase) {
 
 	r := router.Group("/api/v1/token")
 	{
-		r.PATCH("/refresh/:userId", handler.RefreshAccessToken)
+		r.PATCH("/token/:userId", handler.RefreshAccessToken)
 	}
 }
 
+// swagger:operation PATCH /token/{userId} token refreshAccessToken
+// ---
+// summary: Refresh the access token when it was expired.
+// parameters:
+// - name: userId
+//   in: path
+//   description: user id
+//   type: string
+//   required: true
+// security:
+// - Bearer: []
+// responses:
+//   "200":
+//     "$ref": "#/responses/loginResponse"
+//   "400":
+//     "$ref": "#/responses/genericError"
 func (h *TokenHandler) RefreshAccessToken(c *gin.Context) {
 	auth := c.Request.Header.Get("Authorization")
 	if auth == "" {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"status": "failed", "message": "token is missing"})
+		c.JSON(http.StatusBadRequest, swagger.GenericError{Status: "failed", Message: "token is missing"})
 		return
 	}
 
@@ -33,15 +50,14 @@ func (h *TokenHandler) RefreshAccessToken(c *gin.Context) {
 
 	token, err := h.TokenUsecase.RefreshAccessToken(userId, refreshToken)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"status": "failed", "message": err.Error()})
+		c.JSON(http.StatusBadRequest, swagger.GenericError{Status: "failed", Message: err.Error()})
 		return
 	}
 
-	data := map[string]string{
-		"user_id":       userId,
-		"access_token":  token.AccessToken,
-		"refresh_token": token.RefreshToken,
+	response := entities.Token{
+		AccessToken:  token.AccessToken,
+		RefreshToken: token.RefreshToken,
 	}
 
-	c.JSON(http.StatusOK, gin.H{"status": "success", "data": data})
+	c.JSON(http.StatusOK, swagger.LoginResponse{Status: "success", Data: response})
 }
